--- a/gobotany/simplekey/templates/level3_test_links.html
+++ b/gobotany/simplekey/templates/level3_test_links.html
@@ -62,12 +62,12 @@
 
         <dl>
             <dt>split</dt>
-            <dd><del>questions always visible at top left; pop-up for
-            choices</del> (eliminated after user testing)</dd>
+            <dd><del>questions always visible at top left; choices
+                appear in an overlay</del> (eliminated after user testing)</dd>
 
             <dt><del>wide</del> overlay</dt>
             <dd>questions initially hidden but full width; choices appear in
-            an overlay</dd>
+            an overlay (renamed after user testing)</dd>
 
             <dt>inline</dt>
             <dd>questions initially hidden but full width; choices are
