--- a/gobotany/simplekey/templates/level3_test_links.html
+++ b/gobotany/simplekey/templates/level3_test_links.html
@@ -12,7 +12,7 @@
                 border-bottom: 1px solid #c3d941;
                 text-decoration: none;
             }
-            h2 + p a {
+            h2 + p a, li a {
                 font-weight: bold;
             }
             dt {
@@ -24,6 +24,9 @@
             dt, dd {
                 height: 4em;
                 padding-bottom: 0.5em;
+            }
+            li {
+                padding: 0.5em 0;
             }
         </style>
     </head>
@@ -73,6 +76,18 @@
             <dd>questions initially hidden but full width; choices are
             inline</dd>
         </dl>
+
+        <h2>All plant subgroups (Simple Key)</h2>
+
+        <ul>
+            {% for pile, pile_url in piles %}
+            <li>{{ pile.friendly_title }}:
+                <a target="_blank" href="{{ pile_url }}">overlay</a>
+                |
+                <a target="_blank" href="{{ pile_url }}?m=mobile-inline">inline</a>
+            </li>
+            {% endfor %}
+        </ul>
 
     </body>
 </html>
