Redesign breadcrumbs for better usability on small screens.
This follows findings in user testing that the breadcrumbs are
useful but it is easy to activate the wrong link, plus that
they can take up significant space. Hide 'You are here', make
taller link targets, wrap long links better, show the main
page heading again instead of the current-page breadcrumb. (#308)

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -16,9 +16,11 @@
 
 {% block main_content %}
                 <div id="breadcrumb">
-                    You are here:
-                    <a href="{% url 'level1' key %}">{{ key|title }} Key</a>
-                    &gt; <span>{{ pilegroup.friendly_title|lower|capfirst }}</span>
+                    <ul>
+                        <li class="label nogloss">You are here:</li>
+                        <li class="nogloss"><a href="{% url 'level1' key %}">{{ key|title }} Key</a></li>
+                        <li class="this-page nogloss">{{ pilegroup.friendly_title|lower|capfirst }}</li>
+                    </ul>
                 </div>
                 
                 <h1>{{ pilegroup.friendly_title|lower|capfirst }}</h1>
