--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -913,8 +913,8 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
 }*/ }
   body.skey.results #question-nav { font-size: 10px; margin-right: 3px; margin-top: 0; min-height: 666px; width: 149px; }
   body.skey.results #question-nav .section { padding: 0 0 0 4px; }
-  body.skey.results #question-nav .section.instructions { padding: 12px 0px 12px 8px; }
-  body.skey.results #question-nav .section.instructions h5 { font-size: 12px; }
+  body.skey.results #question-nav .section.instructions { padding: 10px 0px 10px 12px; }
+  body.skey.results #question-nav .section.instructions h5 { font-size: 14px; }
   body.skey.results #question-nav .section.family-genus select { margin-bottom: 16px; width: 139px; }
   body.skey.results #question-nav .section.help { margin-bottom: 8px; }
   body.skey.results #question-nav .section p.get-more { margin-bottom: 50px; }
@@ -980,9 +980,9 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results.mobile-wide #question-nav { margin: 25px 8px 12px; width: 95%; }
   body.skey.results.mobile-wide #question-nav.closed { background: none; border: 0; min-height: 0; }
   body.skey.results.mobile-wide #question-nav.closed div:not([class="section instructions"]) { display: none; }
-  body.skey.results.mobile-wide #question-nav.closed .instructions { border-radius: 8px; }
+  body.skey.results.mobile-wide #question-nav.closed .instructions { border-radius: 18px; }
   body.skey.results.mobile-wide #question-nav.closed .instructions h5::after { right: 12px; top: 10px; -webkit-transform: rotate(135deg); -moz-transform: rotate(135deg); -ms-transform: rotate(135deg); -o-transform: rotate(135deg); transform: rotate(135deg); }
-  body.skey.results.mobile-wide #question-nav .instructions { border-radius: 0; cursor: pointer; position: relative; }
+  body.skey.results.mobile-wide #question-nav .instructions { background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dc9402), color-stop(40%, #f0b448), color-stop(100%, #dc9402)); background: -webkit-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -moz-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -o-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); border-radius: 0; cursor: pointer; position: relative; }
   body.skey.results.mobile-wide #question-nav .instructions h5::after { border-color: #fff; border-style: solid; border-width: 3px 3px 0 0; color: #fff; content: " \a0"; display: inline-block; height: 9px; position: absolute; right: 12px; top: 15px; vertical-align: middle; width: 9px; -webkit-transform: rotate(-45deg); -moz-transform: rotate(-45deg); -ms-transform: rotate(-45deg); -o-transform: rotate(-45deg); transform: rotate(-45deg); }
   body.skey.results.mobile-wide #question-nav .choices, body.skey.results.mobile-wide #question-nav .actions { position: static; }
   body.skey.results.mobile-wide #question-nav .scroll { border: 0; border-bottom: 1px solid #c3d941; height: auto; overflow: visible; width: 100%; }
