--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1152,9 +1152,9 @@ ul.get-more-questions-menu {
                 .section {
                     padding: 0 0 0 4px;
                     &.instructions {
-                        padding: 12px 0px 12px 8px;
+                        padding: 10px 0px 10px 12px;
                         h5 {
-                            font-size: 12px;
+                            font-size: 14px;
                         }
                     }
                     &.family-genus {
@@ -1471,7 +1471,7 @@ ul.get-more-questions-menu {
                         display: none;
                     }
                     .instructions {
-                        border-radius: 8px;
+                        border-radius: 18px;
                         h5::after {
                             right: 12px;
                             top: 10px;
@@ -1480,6 +1480,7 @@ ul.get-more-questions-menu {
                     }
                 }
                 .instructions {
+                    @include background($orange_gradient); 
                     border-radius: 0;
                     cursor: pointer;
                     position: relative;
